--- a/homepage.html
+++ b/homepage.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet", href="homepage.css">
     <title>Document</title>
-    <link rel="stylesheet" href="homepage.css">
 </head>
 <body>
-    <h4 class="Head">안녕</h4>
+    <h1 class="Head">HEAD</h1>
+    <nav>NAV</nav>
+    <p>안녕</p>
+    <p class="p">안녕</p>
+    <p>안녕</p>
+    <p>안녕</p>
+    <p>안녕</p>
+    <p>안녕</p>
+    <p>안녕</p>
+    <p>안녕</p>
+    <p>안녕</p>
+    <p>안녕</p>
 </body>
 </html>
